Sync with oracle/release/graal-vm/22.1 - turn off llvmCleanupStackMaps - add missed JVM symbols