@@ -24,21 +24,21 @@
  */
 package com.oracle.svm.core.classinitialization;
 
-// Checkstyle: stop
 import java.util.concurrent.locks.Condition;
 import java.util.concurrent.locks.ReentrantLock;
 
-import org.graalvm.compiler.serviceprovider.GraalUnsafeAccess;
 import org.graalvm.nativeimage.Platform;
 import org.graalvm.nativeimage.Platforms;
 import org.graalvm.nativeimage.c.function.CFunctionPointer;
 
+import com.oracle.svm.core.FunctionPointerHolder;
 import com.oracle.svm.core.annotate.InvokeJavaFunctionPointer;
 import com.oracle.svm.core.hub.DynamicHub;
+import com.oracle.svm.core.jdk.InternalVMMethod;
 import com.oracle.svm.core.snippets.SubstrateForeignCallTarget;
+import com.oracle.svm.core.util.VMError;
 
-import sun.misc.Unsafe;
-// Checkstyle: resume
+import jdk.internal.misc.Unsafe;
 
 /**
  * Information about the runtime class initialization state of a {@link DynamicHub class}, and
@@ -49,9 +49,8 @@ import sun.misc.Unsafe;
  * state is mutable while {@link DynamicHub} must be immutable, and 2) few classes require
  * initialization at runtime so factoring out the information reduces image size.
  */
+@InternalVMMethod
 public final class ClassInitializationInfo {
-
-    private static final Unsafe UNSAFE = GraalUnsafeAccess.getUnsafe();
 
     /**
      * Singleton for classes that are already initialized during image building and do not need
@@ -88,27 +87,10 @@ public final class ClassInitializationInfo {
     }
 
     /**
-     * Isolates require that all function pointers to image methods are in immutable classes.
-     * {@link ClassInitializationInfo} is mutable, so we use this class as an immutable indirection.
-     */
-    public static class ClassInitializerFunctionPointerHolder {
-        /**
-         * We cannot declare the field to have type {@link ClassInitializerFunctionPointer} because
-         * during image building the field refers to a wrapper object that cannot implement custom
-         * interfaces.
-         */
-        final CFunctionPointer functionPointer;
-
-        ClassInitializerFunctionPointerHolder(CFunctionPointer functionPointer) {
-            this.functionPointer = functionPointer;
-        }
-    }
-
-    /**
      * Function pointer to the class initializer, or null if the class does not have a class
      * initializer.
      */
-    private final ClassInitializerFunctionPointerHolder classInitializer;
+    private final FunctionPointerHolder classInitializer;
 
     /**
      * The current initialization state.
@@ -152,7 +134,7 @@ public final class ClassInitializationInfo {
 
     @Platforms(Platform.HOSTED_ONLY.class)
     public ClassInitializationInfo(CFunctionPointer classInitializer) {
-        this.classInitializer = classInitializer == null || classInitializer.isNull() ? null : new ClassInitializerFunctionPointerHolder(classInitializer);
+        this.classInitializer = classInitializer == null || classInitializer.isNull() ? null : new FunctionPointerHolder(classInitializer);
         this.initState = InitState.Linked;
         this.initLock = new ReentrantLock();
         this.hasInitializer = classInitializer != null;
@@ -292,7 +274,7 @@ public final class ClassInitializationInfo {
         Throwable exception = null;
         try {
             /* Step 9: Next, execute the class or interface initialization method of C. */
-            info.invokeClassInitializer();
+            info.invokeClassInitializer(hub);
         } catch (Throwable ex) {
             exception = ex;
         }
@@ -359,7 +341,7 @@ public final class ClassInitializationInfo {
             this.initState = state;
             this.initThread = null;
             /* Make sure previous stores are all done, notably the initState. */
-            UNSAFE.storeFence();
+            Unsafe.getUnsafe().storeFence();
 
             if (initCondition != null) {
                 initCondition.signalAll();
@@ -370,9 +352,17 @@ public final class ClassInitializationInfo {
         }
     }
 
-    private void invokeClassInitializer() {
+    private void invokeClassInitializer(DynamicHub hub) {
         if (classInitializer != null) {
-            ((ClassInitializerFunctionPointer) classInitializer.functionPointer).invoke();
+            ClassInitializerFunctionPointer functionPointer = (ClassInitializerFunctionPointer) classInitializer.functionPointer;
+            if (functionPointer.isNull()) {
+                throw invokeClassInitializerError(hub);
+            }
+            functionPointer.invoke();
         }
+    }
+
+    private static RuntimeException invokeClassInitializerError(DynamicHub hub) {
+        throw VMError.shouldNotReachHere("No classInitializer.functionPointer for class " + hub.getName());
     }
 }
