@@ -24,8 +24,6 @@
  */
 package com.oracle.svm.core.monitor;
 
-//Checkstyle: stop
-
 import java.lang.ref.ReferenceQueue;
 import java.util.Collections;
 import java.util.HashSet;
@@ -40,10 +38,8 @@ import java.util.concurrent.locks.LockSupport;
 import java.util.concurrent.locks.ReentrantLock;
 
 import org.graalvm.compiler.core.common.SuppressFBWarnings;
-import org.graalvm.compiler.serviceprovider.GraalUnsafeAccess;
 import org.graalvm.compiler.serviceprovider.JavaVersionUtil;
 import org.graalvm.compiler.word.BarrieredAccess;
-import org.graalvm.nativeimage.IsolateThread;
 import org.graalvm.nativeimage.Platform;
 import org.graalvm.nativeimage.Platforms;
 
@@ -57,20 +53,14 @@ import com.oracle.svm.core.annotate.RestrictHeapAccess.Access;
 import com.oracle.svm.core.annotate.TargetClass;
 import com.oracle.svm.core.annotate.Uninterruptible;
 import com.oracle.svm.core.hub.DynamicHub;
-import com.oracle.svm.core.snippets.KnownIntrinsics;
+import com.oracle.svm.core.hub.DynamicHubCompanion;
 import com.oracle.svm.core.snippets.SubstrateForeignCallTarget;
 import com.oracle.svm.core.stack.StackOverflowCheck;
-import com.oracle.svm.core.thread.JavaContinuations;
-import com.oracle.svm.core.thread.JavaThreads;
 import com.oracle.svm.core.thread.ThreadStatus;
 import com.oracle.svm.core.thread.VMOperationControl;
-import com.oracle.svm.core.threadlocal.FastThreadLocalFactory;
-import com.oracle.svm.core.threadlocal.FastThreadLocalInt;
 import com.oracle.svm.core.util.VMError;
 
-import sun.misc.Unsafe;
-
-//Checkstyle resume
+import jdk.internal.misc.Unsafe;
 
 /**
  * Implementation of synchronized-related operations.
@@ -95,25 +85,7 @@ import sun.misc.Unsafe;
  */
 public class MultiThreadedMonitorSupport extends MonitorSupport {
 
-    private static final Unsafe UNSAFE = GraalUnsafeAccess.getUnsafe();
-
-    /**
-     * This is only used for preempting a continuation in the experimental Loom JDK support. There's
-     * performance impact in this solution.
-     */
-    protected static final FastThreadLocalInt lockedMonitors = FastThreadLocalFactory.createInt();
-
-    protected static void onMonitorLocked() {
-        if (JavaContinuations.useLoom()) {
-            lockedMonitors.set(lockedMonitors.get() + 1);
-        }
-    }
-
-    protected static void onMonitorUnlocked() {
-        if (JavaContinuations.useLoom()) {
-            lockedMonitors.set(lockedMonitors.get() - 1);
-        }
-    }
+    private static final Unsafe UNSAFE = Unsafe.getUnsafe();
 
     /**
      * Types that are used to implement the secondary storage for monitor slots cannot themselves
@@ -176,6 +148,12 @@ public class MultiThreadedMonitorSupport extends MonitorSupport {
                 monitorTypes.add(Class.forName("jdk.internal.ref.PhantomCleanable"));
             }
 
+            /*
+             * Use as the delegate for locking on {@link Class} (i.e. {@link DynamicHub}) since the
+             * hub itself must be immutable.
+             */
+            monitorTypes.add(DynamicHubCompanion.class);
+
             FORCE_MONITOR_SLOT_TYPES = Collections.unmodifiableSet(monitorTypes);
         } catch (ClassNotFoundException e) {
             throw VMError.shouldNotReachHere("Error building the list of types that always need a monitor slot.", e);
@@ -190,9 +168,11 @@ public class MultiThreadedMonitorSupport extends MonitorSupport {
      */
     static final ConditionObject MONITOR_WITHOUT_CONDITION = (ConditionObject) new ReentrantLock().newCondition();
 
+    // Checkstyle: stop
     /** Substituted in {@link Target_com_oracle_svm_core_monitor_MultiThreadedMonitorSupport} */
     private static long SYNC_MONITOR_CONDITION_FIELD_OFFSET = -1;
     private static long SYNC_STATE_FIELD_OFFSET = -1;
+    // Checkstyle: resume
 
     /**
      * Secondary storage for monitor slots. Synchronized to prevent concurrent access and
@@ -255,15 +235,14 @@ public class MultiThreadedMonitorSupport extends MonitorSupport {
         }
     }
 
-    protected static final String NO_LONGER_UNINTERRUPTIBLE = "The monitor snippet slow path is uninterruptible to avoid stack overflow errors being thrown. Now the yellow zone is enabled and we are no longer uninterruptible, and allocation is allowed again too";
+    protected static final String NO_LONGER_UNINTERRUPTIBLE = "The monitor snippet slow path is uninterruptible to avoid stack overflow errors being thrown. " +
+                    "Now the yellow zone is enabled and we are no longer uninterruptible, and allocation is allowed again too";
 
-    @RestrictHeapAccess(reason = NO_LONGER_UNINTERRUPTIBLE, overridesCallers = true, access = Access.UNRESTRICTED)
+    @RestrictHeapAccess(reason = NO_LONGER_UNINTERRUPTIBLE, access = Access.UNRESTRICTED)
     @Override
     public void monitorEnter(Object obj) {
         ReentrantLock lockObject = getOrCreateMonitor(obj, true);
         lockObject.lock();
-
-        onMonitorLocked();
     }
 
     @SubstrateForeignCallTarget(stubCallingConvention = false)
@@ -296,13 +275,11 @@ public class MultiThreadedMonitorSupport extends MonitorSupport {
         }
     }
 
-    @RestrictHeapAccess(reason = NO_LONGER_UNINTERRUPTIBLE, overridesCallers = true, access = Access.UNRESTRICTED)
+    @RestrictHeapAccess(reason = NO_LONGER_UNINTERRUPTIBLE, access = Access.UNRESTRICTED)
     @Override
     public void monitorExit(Object obj) {
         ReentrantLock lockObject = getOrCreateMonitor(obj, true);
         lockObject.unlock();
-
-        onMonitorUnlocked();
     }
 
     @Override
@@ -356,7 +333,7 @@ public class MultiThreadedMonitorSupport extends MonitorSupport {
         int newState = oldState + 1;
         VMError.guarantee(newState > 0, "Maximum lock count exceeded");
 
-        boolean success = UNSAFE.compareAndSwapInt(qSync, SYNC_STATE_FIELD_OFFSET, oldState, newState);
+        boolean success = UNSAFE.compareAndSetInt(qSync, SYNC_STATE_FIELD_OFFSET, oldState, newState);
         VMError.guarantee(success, "Could not re-lock object during deoptimization");
         aSync.exclusiveOwnerThread = currentThread;
     }
@@ -371,12 +348,6 @@ public class MultiThreadedMonitorSupport extends MonitorSupport {
     public boolean isLockedByAnyThread(Object obj) {
         ReentrantLock lockObject = getOrCreateMonitor(obj, false);
         return lockObject != null && lockObject.isLocked();
-    }
-
-    @Override
-    public int countThreadLock(IsolateThread vmThread) {
-        VMError.guarantee(JavaContinuations.useLoom(), "This method is only supported when continuations are enabled.");
-        return lockedMonitors.get(vmThread);
     }
 
     @SuppressFBWarnings(value = {"WA_AWAIT_NOT_IN_LOOP"}, justification = "This method is a wait implementation.")
@@ -424,7 +395,20 @@ public class MultiThreadedMonitorSupport extends MonitorSupport {
         return DynamicHub.fromClass(obj.getClass()).getMonitorOffset();
     }
 
-    protected final ReentrantLock getOrCreateMonitor(Object obj, boolean createIfNotExisting) {
+    protected static Object replaceObject(Object unreplacedObject) {
+        if (unreplacedObject instanceof DynamicHub) {
+            /*
+             * Classes (= DynamicHub) never have a monitor slot because they must be immutable.
+             * Since the companion object is never exposed to user code, we can use it as a
+             * replacement object that is mutable and is marked to always have a monitor slot.
+             */
+            return ((DynamicHub) unreplacedObject).getCompanion();
+        }
+        return unreplacedObject;
+    }
+
+    protected final ReentrantLock getOrCreateMonitor(Object unreplacedObject, boolean createIfNotExisting) {
+        Object obj = replaceObject(unreplacedObject);
         assert obj != null;
         int monitorOffset = getMonitorOffset(obj);
         if (monitorOffset != 0) {
@@ -437,18 +421,18 @@ public class MultiThreadedMonitorSupport extends MonitorSupport {
     }
 
     protected ReentrantLock getOrCreateMonitorFromObject(Object obj, boolean createIfNotExisting, int monitorOffset) {
-        ReentrantLock existingMonitor = KnownIntrinsics.convertUnknownValue(BarrieredAccess.readObject(obj, monitorOffset), ReentrantLock.class);
+        ReentrantLock existingMonitor = (ReentrantLock) BarrieredAccess.readObject(obj, monitorOffset);
         if (existingMonitor != null || !createIfNotExisting) {
             assert existingMonitor == null || isMonitorLock(existingMonitor);
             return existingMonitor;
         }
         /* Atomically put a new lock in place of the null at the monitorOffset. */
         ReentrantLock newMonitor = newMonitorLock();
-        if (UNSAFE.compareAndSwapObject(obj, monitorOffset, null, newMonitor)) {
+        if (UNSAFE.compareAndSetObject(obj, monitorOffset, null, newMonitor)) {
             return newMonitor;
         }
         /* We lost the race, use the lock some other thread installed. */
-        return KnownIntrinsics.convertUnknownValue(BarrieredAccess.readObject(obj, monitorOffset), ReentrantLock.class);
+        return (ReentrantLock) BarrieredAccess.readObject(obj, monitorOffset);
     }
 
     protected ReentrantLock getOrCreateMonitorFromMap(Object obj, boolean createIfNotExisting) {
@@ -485,12 +469,16 @@ public class MultiThreadedMonitorSupport extends MonitorSupport {
         return newMonitor;
     }
 
+    protected static boolean isMonitorLock(ReentrantLock lock) {
+        return lock != null && isMonitorLockSynchronizer(SubstrateUtil.cast(lock, Target_java_util_concurrent_locks_ReentrantLock.class).sync);
+    }
+
     /**
      * Creates a new {@link ReentrantLock} that is locked by the provided thread. This requires
      * patching of internal state, since there is no public API in {@link ReentrantLock} to do that
      * (for a good reason, because it is a highly unusual operation).
      */
-    protected static ReentrantLock newLockedMonitorForThread(IsolateThread isolateThread, int recursionDepth) {
+    protected static ReentrantLock newLockedMonitorForThread(Thread thread, int recursionDepth) {
         ReentrantLock result = newMonitorLock();
         for (int i = 0; i < recursionDepth; i++) {
             result.lock();
@@ -500,13 +488,9 @@ public class MultiThreadedMonitorSupport extends MonitorSupport {
         Target_java_util_concurrent_locks_AbstractOwnableSynchronizer sync = SubstrateUtil.cast(lock.sync, Target_java_util_concurrent_locks_AbstractOwnableSynchronizer.class);
 
         assert sync.exclusiveOwnerThread == Thread.currentThread() : "Must be locked by current thread";
-        sync.exclusiveOwnerThread = JavaThreads.fromVMThread(isolateThread);
+        sync.exclusiveOwnerThread = thread;
 
         return result;
-    }
-
-    protected static boolean isMonitorLock(ReentrantLock lock) {
-        return lock != null && isMonitorLockSynchronizer(SubstrateUtil.cast(lock, Target_java_util_concurrent_locks_ReentrantLock.class).sync);
     }
 
     protected static boolean isMonitorLockSynchronizer(Object obj) {
@@ -534,7 +518,7 @@ public class MultiThreadedMonitorSupport extends MonitorSupport {
             return existingCondition;
         }
         ConditionObject newCondition = (ConditionObject) monitorLock.newCondition();
-        if (!UNSAFE.compareAndSwapObject(sync, SYNC_MONITOR_CONDITION_FIELD_OFFSET, MONITOR_WITHOUT_CONDITION, newCondition)) {
+        if (!UNSAFE.compareAndSetObject(sync, SYNC_MONITOR_CONDITION_FIELD_OFFSET, MONITOR_WITHOUT_CONDITION, newCondition)) {
             newCondition = SubstrateUtil.cast(sync.objectMonitorCondition, ConditionObject.class);
             assert isMonitorCondition(newCondition) : "race winner must have installed valid condition";
         }
@@ -577,6 +561,7 @@ final class Target_java_util_concurrent_locks_ReentrantLock_NonfairSync {
     volatile Target_java_util_concurrent_locks_AbstractQueuedSynchronizer_ConditionObject objectMonitorCondition;
 }
 
+// Checkstyle: stop
 @TargetClass(MultiThreadedMonitorSupport.class)
 final class Target_com_oracle_svm_core_monitor_MultiThreadedMonitorSupport {
     @Alias @RecomputeFieldValue(kind = RecomputeFieldValue.Kind.FieldOffset, name = "objectMonitorCondition", declClass = Target_java_util_concurrent_locks_ReentrantLock_NonfairSync.class) //
@@ -607,3 +592,4 @@ final class Target_java_util_concurrent_locks_AbstractQueuedSynchronizer_Conditi
 @TargetClass(value = ReferenceQueue.class, innerClass = "Lock")
 final class Target_java_lang_ref_ReferenceQueue_Lock {
 }
+// Checkstyle: resume
