@@ -74,18 +74,20 @@ import org.graalvm.nativeimage.hosted.Feature;
 
 import com.oracle.graal.pointsto.infrastructure.SubstitutionProcessor;
 import com.oracle.graal.pointsto.meta.AnalysisType;
+import com.oracle.graal.pointsto.phases.NoClassInitializationPlugin;
+import com.oracle.graal.pointsto.util.GraalAccess;
 import com.oracle.svm.core.ParsingReason;
+import com.oracle.svm.core.SubstrateUtil;
 import com.oracle.svm.core.annotate.AutomaticFeature;
 import com.oracle.svm.core.annotate.RecomputeFieldValue;
 import com.oracle.svm.core.annotate.RecomputeFieldValue.Kind;
+import com.oracle.svm.core.jdk.RecordSupport;
 import com.oracle.svm.core.option.HostedOptionKey;
 import com.oracle.svm.core.util.VMError;
 import com.oracle.svm.hosted.FeatureImpl.DuringAnalysisAccessImpl;
 import com.oracle.svm.hosted.ImageClassLoader;
 import com.oracle.svm.hosted.SVMHost;
-import com.oracle.svm.hosted.c.GraalAccess;
 import com.oracle.svm.hosted.classinitialization.ClassInitializerGraphBuilderPhase;
-import com.oracle.svm.hosted.phases.NoClassInitializationPlugin;
 import com.oracle.svm.hosted.snippets.ReflectionPlugins;
 
 import jdk.vm.ci.meta.JavaKind;
@@ -129,8 +131,10 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
     private final List<ResolvedJavaType> suppressWarnings;
 
     private static ResolvedJavaType resolvedUnsafeClass;
+    private static ResolvedJavaType resolvedSunMiscUnsafeClass;
 
     private ResolvedJavaMethod unsafeObjectFieldOffsetFieldMethod;
+    private ResolvedJavaMethod sunMiscUnsafeObjectFieldOffsetMethod;
     private ResolvedJavaMethod unsafeObjectFieldOffsetClassStringMethod;
     private ResolvedJavaMethod unsafeArrayBaseOffsetMethod;
     private ResolvedJavaMethod unsafeArrayIndexScaleMethod;
@@ -168,43 +172,48 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
             fieldGetMethod = originalMetaAccess.lookupJavaMethod(fieldGet);
             neverInlineSet.add(fieldGetMethod);
 
-            if (JavaVersionUtil.JAVA_SPEC > 8) {
-                /*
-                 * Various factory methods in VarHandle query the array base/index or field offsets.
-                 * There is no need to analyze these calls because VarHandle accesses are
-                 * intrinsified to simple array and field access nodes in
-                 * IntrinsifyMethodHandlesInvocationPlugin.
-                 */
-                for (Method method : loader.findClassOrFail("java.lang.invoke.VarHandles").getDeclaredMethods()) {
-                    neverInlineSet.add(originalMetaAccess.lookupJavaMethod(method));
-                }
+            /*
+             * Various factory methods in VarHandle query the array base/index or field offsets.
+             * There is no need to analyze these calls because VarHandle accesses are intrinsified
+             * to simple array and field access nodes in IntrinsifyMethodHandlesInvocationPlugin.
+             */
+            for (Method method : loader.findClassOrFail("java.lang.invoke.VarHandles").getDeclaredMethods()) {
+                neverInlineSet.add(originalMetaAccess.lookupJavaMethod(method));
             }
 
             Class<?> unsafeClass;
+            Class<?> sunMiscUnsafeClass;
 
             try {
-                if (JavaVersionUtil.JAVA_SPEC <= 8) {
-                    unsafeClass = Class.forName("sun.misc.Unsafe");
-                } else {
-                    unsafeClass = Class.forName("jdk.internal.misc.Unsafe");
-                }
+                sunMiscUnsafeClass = Class.forName("sun.misc.Unsafe");
+                unsafeClass = Class.forName("jdk.internal.misc.Unsafe");
             } catch (ClassNotFoundException cnfe) {
                 throw VMError.shouldNotReachHere(cnfe);
             }
 
             resolvedUnsafeClass = originalMetaAccess.lookupJavaType(unsafeClass);
+            resolvedSunMiscUnsafeClass = originalMetaAccess.lookupJavaType(sunMiscUnsafeClass);
 
             Method unsafeObjectFieldOffset = unsafeClass.getMethod("objectFieldOffset", java.lang.reflect.Field.class);
             unsafeObjectFieldOffsetFieldMethod = originalMetaAccess.lookupJavaMethod(unsafeObjectFieldOffset);
             noCheckedExceptionsSet.add(unsafeObjectFieldOffsetFieldMethod);
             neverInlineSet.add(unsafeObjectFieldOffsetFieldMethod);
 
-            if (JavaVersionUtil.JAVA_SPEC >= 11) {
-                /* JDK 11 and later have Unsafe.objectFieldOffset(Class, String). */
-                Method unsafeObjectClassStringOffset = unsafeClass.getMethod("objectFieldOffset", java.lang.Class.class, String.class);
-                unsafeObjectFieldOffsetClassStringMethod = originalMetaAccess.lookupJavaMethod(unsafeObjectClassStringOffset);
-                noCheckedExceptionsSet.add(unsafeObjectFieldOffsetClassStringMethod);
-                neverInlineSet.add(unsafeObjectFieldOffsetClassStringMethod);
+            Method unsafeObjectClassStringOffset = unsafeClass.getMethod("objectFieldOffset", java.lang.Class.class, String.class);
+            unsafeObjectFieldOffsetClassStringMethod = originalMetaAccess.lookupJavaMethod(unsafeObjectClassStringOffset);
+            noCheckedExceptionsSet.add(unsafeObjectFieldOffsetClassStringMethod);
+            neverInlineSet.add(unsafeObjectFieldOffsetClassStringMethod);
+
+            if (JavaVersionUtil.JAVA_SPEC >= 17) {
+                /*
+                 * JDK 17 and later add checks for hidden classes and record classes in
+                 * sun.misc.Unsafe before delegating to jdk.internal.misc.Unsafe. When inlined, the
+                 * checks make control flow too complex to detect offset field assignments.
+                 */
+                Method sunMiscUnsafeObjectFieldOffset = sunMiscUnsafeClass.getMethod("objectFieldOffset", java.lang.reflect.Field.class);
+                sunMiscUnsafeObjectFieldOffsetMethod = originalMetaAccess.lookupJavaMethod(sunMiscUnsafeObjectFieldOffset);
+                noCheckedExceptionsSet.add(sunMiscUnsafeObjectFieldOffsetMethod);
+                neverInlineSet.add(sunMiscUnsafeObjectFieldOffsetMethod);
             }
 
             Method unsafeArrayBaseOffset = unsafeClass.getMethod("arrayBaseOffset", java.lang.Class.class);
@@ -356,7 +365,7 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
 
                 for (Invoke invoke : clinitGraph.getInvokes()) {
                     if (invoke.callTarget() instanceof MethodCallTargetNode) {
-                        if (isInvokeTo(invoke, unsafeObjectFieldOffsetFieldMethod)) {
+                        if (isInvokeTo(invoke, unsafeObjectFieldOffsetFieldMethod) || isInvokeTo(invoke, sunMiscUnsafeObjectFieldOffsetMethod)) {
                             processUnsafeObjectFieldOffsetFieldInvoke(hostType, invoke);
                         } else if (isInvokeTo(invoke, unsafeObjectFieldOffsetClassStringMethod)) {
                             processUnsafeObjectFieldOffsetClassStringInvoke(hostType, invoke);
@@ -390,9 +399,7 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
         ValueNode fieldArgument = unsafeObjectFieldOffsetInvoke.callTarget().arguments().get(1);
         if (fieldArgument.isConstant()) {
             Field field = snippetReflection.asObject(Field.class, fieldArgument.asJavaConstant());
-            if (field == null) {
-                unsuccessfulReasons.add("The argument of Unsafe.objectFieldOffset() is a null constant.");
-            } else {
+            if (isValidField(unsafeObjectFieldOffsetInvoke, field, unsuccessfulReasons)) {
                 targetFieldHolder = field.getDeclaringClass();
                 targetFieldName = field.getName();
             }
@@ -400,6 +407,27 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
             unsuccessfulReasons.add("The argument of Unsafe.objectFieldOffset(Field) is not a constant field.");
         }
         processUnsafeObjectFieldOffsetInvoke(type, unsafeObjectFieldOffsetInvoke, unsuccessfulReasons, targetFieldHolder, targetFieldName);
+    }
+
+    private boolean isValidField(Invoke invoke, Field field, List<String> unsuccessfulReasons) {
+        if (field == null) {
+            unsuccessfulReasons.add("The argument of Unsafe.objectFieldOffset() is a null constant.");
+            return false;
+        }
+
+        boolean valid = true;
+        if (JavaVersionUtil.JAVA_SPEC >= 17 && isInvokeTo(invoke, sunMiscUnsafeObjectFieldOffsetMethod)) {
+            Class<?> declaringClass = field.getDeclaringClass();
+            if (RecordSupport.singleton().isRecord(declaringClass)) {
+                unsuccessfulReasons.add("The argument to sun.misc.Unsafe.objectFieldOffset(Field) is a field of a record.");
+                valid = false;
+            }
+            if (SubstrateUtil.isHiddenClass(declaringClass)) {
+                unsuccessfulReasons.add("The argument to sun.misc.Unsafe.objectFieldOffset(Field) is a field of a hidden class.");
+                valid = false;
+            }
+        }
+        return valid;
     }
 
     /**
@@ -840,8 +868,8 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
              * e.g., like a store to a field that we would then miss.
              */
             MethodCallTargetNode methodCallTarget = (MethodCallTargetNode) valueNodeUsage;
-            ResolvedJavaMethod targetMethod = methodCallTarget.targetMethod();
-            if (targetMethod.getDeclaringClass().equals(resolvedUnsafeClass)) {
+            ResolvedJavaType declaringClass = methodCallTarget.targetMethod().getDeclaringClass();
+            if (declaringClass.equals(resolvedUnsafeClass) || declaringClass.equals(resolvedSunMiscUnsafeClass)) {
                 return true;
             }
         }
@@ -858,6 +886,13 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
             reportConflictingSubstitution(field, kind, conflictingSubstitution);
             return false;
         } else {
+            ComputedValueField computedValueField = substitutionSupplier.get();
+            Field targetField = computedValueField.getTargetField();
+            if (targetField != null && annotationSubstitutions.isDeleted(targetField)) {
+                String conflictingSubstitution = "The target field of " + field.format("%H.%n") + " is marked as deleted. ";
+                reportSkippedSubstitution(field, kind, conflictingSubstitution);
+                return false;
+            }
             Optional<ResolvedJavaField> annotationSubstitution = annotationSubstitutions.findSubstitution(field);
             if (annotationSubstitution.isPresent()) {
                 /* An annotation substitutions detected. */
@@ -865,7 +900,9 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
                 if (substitutionField instanceof ComputedValueField) {
                     ComputedValueField computedSubstitutionField = (ComputedValueField) substitutionField;
                     if (computedSubstitutionField.getRecomputeValueKind().equals(kind)) {
-                        reportUnnecessarySubstitution(substitutionField, computedSubstitutionField);
+                        if (computedSubstitutionField.getTargetField().equals(computedSubstitutionField.getJavaField())) {
+                            reportUnnecessarySubstitution(substitutionField, computedSubstitutionField);
+                        }
                         return false;
                     } else if (computedSubstitutionField.getRecomputeValueKind().equals(Kind.None)) {
                         /*
@@ -879,7 +916,7 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
                          * AnalysisUniverse.lookupAllowUnresolved(JavaField), the alias field is
                          * forwarded to the the automatic substitution.
                          */
-                        addSubstitutionField(computedSubstitutionField, substitutionSupplier.get());
+                        addSubstitutionField(computedSubstitutionField, computedValueField);
                         reportOvewrittenSubstitution(substitutionField, kind, computedSubstitutionField.getAnnotated(), computedSubstitutionField.getRecomputeValueKind());
                         return true;
                     } else {
@@ -895,7 +932,7 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
                 }
             } else {
                 /* No other substitutions detected. */
-                addSubstitutionField(field, substitutionSupplier.get());
+                addSubstitutionField(field, computedValueField);
                 return true;
             }
         }
@@ -956,6 +993,18 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
             String msg = "Warning: The " + substitutionKindStr + " substitution for " + fieldStr + " could not be recomputed automatically because a conflicting substitution was detected. ";
             msg += "Conflicting substitution: " + conflictingSubstitution;
             msg += "Add a " + substitutionKindStr + " manual substitution for " + fieldStr + ". ";
+
+            System.out.println(msg);
+        }
+    }
+
+    private static void reportSkippedSubstitution(ResolvedJavaField field, Kind substitutionKind, String conflictingSubstitution) {
+        if (Options.UnsafeAutomaticSubstitutionsLogLevel.getValue() >= BASIC_LEVEL) {
+            String fieldStr = field.format("%H.%n");
+            String substitutionKindStr = RecomputeFieldValue.class.getSimpleName() + "." + substitutionKind;
+
+            String msg = "Warning: The " + substitutionKindStr + " substitution for " + fieldStr + " could not be recomputed automatically because a conflicting substitution was detected. ";
+            msg += "Conflicting substitution: " + conflictingSubstitution;
 
             System.out.println(msg);
         }
@@ -1039,7 +1088,10 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
     private StructuredGraph getStaticInitializerGraph(ResolvedJavaMethod clinit, OptionValues options, DebugContext debug) {
         assert clinit.hasBytecodes();
 
-        StructuredGraph graph = new StructuredGraph.Builder(options, debug).method(clinit).build();
+        StructuredGraph graph = new StructuredGraph.Builder(options, debug)
+                        .method(clinit)
+                        .recordInlinedMethods(false)
+                        .build();
         HighTierContext context = new HighTierContext(GraalAccess.getOriginalProviders(), null, OptimisticOptimizations.NONE);
         graph.setGuardsStage(GuardsStage.FIXED_DEOPTS);
 
